--- a/notebooks/template.ipynb
+++ b/notebooks/template.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "import seaborn as sns\n",
     "sns.set_context(\"poster\")\n",
-    "sns.set(rc={'figure.figsize': (16, 9.)})\n",
+    "sns.set(rc={\"figure.figsize\": (16, 9.)})\n",
     "sns.set_style(\"whitegrid\")\n",
     "\n",
     "import pandas as pd\n",
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dsproject_demo import *"
+    "from demo_dsproject import *"
    ]
   },
   {
